Fixing starting point

--- a/Pattern Function.ipynb
+++ b/Pattern Function.ipynb
@@ -46,8 +46,7 @@
     "    unique_tokens = 0\n",
     "    avg_token_len = 0.0\n",
     "    lex_diversity = 0.0\n",
-    "    top_10_with_sw = []\n",
-    "    top_10_no_sw = []\n",
+    "    top_10 = []\n",
     "    \n",
     "    # Do your tokenization and normalization here\n",
     "    \n",
@@ -62,8 +61,7 @@
     "               'unique_tokens':unique_tokens.\n",
     "               'avg_token_length':avg_token_len,\n",
     "               'lexical_diversity':lex_diversity,\n",
-    "               'top_10_tokens_stopwords':top_10_with_sw,\n",
-    "               'top_10_tokens_no_stopwords':top_10_no_sw}\n",
+    "               'top_10':top_10_with_sw}\n",
     "\n",
     "    return(results)\n"
    ]
@@ -101,12 +99,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(beo_results['tokens']==10146)\n",
-    "assert(beo_results['unique_tokens']==3033)\n",
-    "assert(0.29 < beo_results['lexical_diversity'] < 0.3)\n",
-    "assert(5.1 < beo_results['avg_token_length'] < 5.15)\n",
+    "assert(beo_results['tokens']==9288)\n",
+    "assert(beo_results['unique_tokens']==2970)\n",
+    "assert(0.31 < beo_results['lexical_diversity'] < 0.32)\n",
+    "assert(5.3 < beo_results['avg_token_length'] < 5.4)\n",
     "assert(len(beo_results['top_10_tokens'])==10)\n",
-    "assert(beo_results['top_10_tokens'][4]==('then',53))\n",
+    "assert(beo_results['top_10_tokens'][4]==('thou',47))\n",
     "print(\"Passed all assertion tests.\")"
    ]
   },
@@ -116,13 +114,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(big_results['tokens']==445372)\n",
-    "assert(big_results['unique_tokens']==25293)\n",
-    "assert(0.05 < big_results['lexical_diversity'] < 0.06)\n",
-    "assert(6 < big_results['avg_token_length'] < 6.1)\n",
+    "assert(big_results['tokens']==410950)\n",
+    "assert(big_results['unique_tokens']==25173)\n",
+    "assert(0.06 < big_results['lexical_diversity'] < 0.065)\n",
+    "assert(6.3 < big_results['avg_token_length'] < 6.4)\n",
     "assert(len(big_results['top_10_tokens'])==10)\n",
-    "assert(big_results['top_10_tokens'][0]==('the',6428))\n",
-    "assert(big_results['top_10_tokens'][8]==('prince',1711))\n",
+    "assert(big_results['top_10_tokens'][0]==('said',2946))\n",
+    "assert(big_results['top_10_tokens'][8]==('upon',1088))\n",
     "print(\"Passed all assertion tests.\")"
    ]
   },
