Continuing to find bugs

--- a/Pattern Function.ipynb
+++ b/Pattern Function.ipynb
@@ -46,7 +46,7 @@
     "    unique_tokens = 0\n",
     "    avg_token_len = 0.0\n",
     "    lex_diversity = 0.0\n",
-    "    top_10 = []\n",
+    "    top_10 = Counter()\n",
     "    \n",
     "    # Do your tokenization and normalization here\n",
     "    \n",
@@ -61,7 +61,7 @@
     "               'unique_tokens':unique_tokens.\n",
     "               'avg_token_length':avg_token_len,\n",
     "               'lexical_diversity':lex_diversity,\n",
-    "               'top_10':top_10_with_sw}\n",
+    "               'top_10':top_10}\n",
     "\n",
     "    return(results)\n"
    ]
@@ -103,8 +103,8 @@
     "assert(beo_results['unique_tokens']==2970)\n",
     "assert(0.31 < beo_results['lexical_diversity'] < 0.32)\n",
     "assert(5.3 < beo_results['avg_token_length'] < 5.4)\n",
-    "assert(len(beo_results['top_10_tokens'])==10)\n",
-    "assert(beo_results['top_10_tokens'][4]==('thou',47))\n",
+    "assert(len(beo_results['top_10'])==10)\n",
+    "assert(beo_results['top_10'][4]==('thou',47))\n",
     "print(\"Passed all assertion tests.\")"
    ]
   },
@@ -119,8 +119,8 @@
     "assert(0.06 < big_results['lexical_diversity'] < 0.065)\n",
     "assert(6.3 < big_results['avg_token_length'] < 6.4)\n",
     "assert(len(big_results['top_10_tokens'])==10)\n",
-    "assert(big_results['top_10_tokens'][0]==('said',2946))\n",
-    "assert(big_results['top_10_tokens'][8]==('upon',1088))\n",
+    "assert(big_results['top_10'][0]==('said',2946))\n",
+    "assert(big_results['top_10'][8]==('upon',1088))\n",
     "print(\"Passed all assertion tests.\")"
    ]
   },
