--- a/Pattern Function.ipynb
+++ b/Pattern Function.ipynb
@@ -58,7 +58,7 @@
     "    \n",
     "    # Now we'll fill out the dictionary. \n",
     "    results = {'tokens':total_tokens,\n",
-    "               'unique_tokens':unique_tokens.\n",
+    "               'unique_tokens':unique_tokens,\n",
     "               'avg_token_length':avg_token_len,\n",
     "               'lexical_diversity':lex_diversity,\n",
     "               'top_10':top_10}\n",
