--- a/Pattern Function.ipynb
+++ b/Pattern Function.ipynb
@@ -118,7 +118,7 @@
     "assert(big_results['unique_tokens']==25173)\n",
     "assert(0.06 < big_results['lexical_diversity'] < 0.065)\n",
     "assert(6.3 < big_results['avg_token_length'] < 6.4)\n",
-    "assert(len(big_results['top_10_tokens'])==10)\n",
+    "assert(len(big_results['top_10'])==10)\n",
     "assert(big_results['top_10'][0]==('said',2946))\n",
     "assert(big_results['top_10'][8]==('upon',1088))\n",
     "print(\"Passed all assertion tests.\")"
@@ -318,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -332,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
